--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Malgorzata Pick" />
+    <meta name="author" content="Meganathan Pick" />
     <meta
       name="description"
       content="Malgorzata Pick | Web design | E-handel | E-commerce | Online shop | Online boutique | Onlinebutik"
@@ -179,7 +179,7 @@
           <p>Klarna.</p>
         </div>
       </div>
-      <p class="copyright">Copyright &copy; 2023 | Malgorzata Pick</p>
+      <p class="copyright">Copyright &copy; 2025 | Meganathan</p>
     </footer>
   </body>
 </html>
